2009-05-17  Vivek Dasmohapatra  <vivek@etla.org>

	* signals/file_transfers.c (XSIG, _elim_signal_ft): show ft event origin

	* elisp/garak.el: 
	(garak-ui-ft-update-progress)  : set ft status here too
	(garak-ui-ft-update-display)   : check for done w byte count as well
	(garak-buddy-list-node-command): ui menu send file op done
	(garak-cmd-send-file)          : cli send file function
	(garak-command-handlers, garak-command-match)
	(garak-command-completers)     : ditto 

	* elisp/elim.el: 
	(elim-request-field-string): distinguish file/string/dir
	(elim-request-item)        : ditto
	(elim-send-file)           : initiate file transfer

2009-05-16  Vivek Dasmohapatra  <vivek@etla.org>

	* handlers/send_file.c (_h_elim_send_file): support sending files

	* signals/file_transfers.c (_elim_ft_ui_op_create): allocate unique uid
	(_elim_ft_ui_op_destroy): emit transfer-status call
	(_elim_ft_ui_op_add)    : emit transfer-status call
	(_elim_ft_ui_op_cancel) : emit transfer-status call
	(_elim_ft_ui_op_update) : emit transfer-progress call

	* elisp/garak.el: handle file transfer status calls and provide
	                  file transfer tracking UI.

	* elisp/elim.el : handle new file transfer calls

2009-05-15  Vivek Dasmohapatra  <vivek@etla.org>

	* make/elim-func-handlers-c.sh: echo -n not portable (OSX, maybe others)

	* ui_ops/notify_ui_ops.c:
	(_elim_notify_track_images, _elim_close_notify): 64 bit size warning.

	* elisp/elim.el:
	(elim-update-process-data): abstracted out process data alist faff.
	(elim-request-item)       : label buttons correctly for file request.
	                            improve widget layout/info for file request.
	
	* elisp/garak.el (garak-cmd-prefs): /prefs command
	
	* Makefile                : build/link new signals directory

	* signals/file_transfers.c: 
	(elim_ft_signals_init) : file transfer signals handled.
	(_elim_ft_ui_op_update): file transfer progress support.